syntax = "proto3";

package envoymobile.extensions.filters.http.route_cache_reset;

message RouteCacheReset {
}
