syntax = "proto3";

package envoymobile.test.integration.filters.http.test_read;

message TestRead {
}
